Feat: Pretier rules and update

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,14 @@
 {
   "plugins": ["prettier-plugin-svelte"],
-  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte",
+        "semi": true,
+        "tabWidth": 2,
+        "singleQuote": true
+      }
+    }
+  ]
 }
